solution bdd